--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,14 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="node_modules/bootstrap-social/bootstrap-social.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Ristorante Con Fusion: About Us</title>
   </head>
@@ -20,24 +28,39 @@
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
       <div class="container">
         <button
-          class="navbar-toggler"
+          class="navbar-toggler collapsed"
           type="button"
-          data-toggle="collapse"
-          data-target="#Navbar"
+          data-bs-toggle="collapse"
+          data-target="#navbar"
+          aria-expanded="false"
+          aria-controls="navbar"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
-        <div class="collapse navbar-collapse" id="Navbar">
+        <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Home</a>
-            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="./index.html"
+                ><span class="fa fa-home fa-lg"></span>Home</a
+              >
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">
+                <span class="fa fa-info fa-lg"></span>
+                About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><span class="fa fa-list fa-lg"></span>Menu</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><span class="fa fa-address-card fa-lg"></span>Contact</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -158,9 +181,10 @@
               121, Clear Water Bay Road<br />
               Clear Water Bay, Kowloon<br />
               HONG KONG<br />
-              Tel.: +852 1234 5678<br />
-              Fax: +852 8765 4321<br />
-              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+              <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br />
+              <i class="fa fa-fax fa-lg"></i>>: +852 8765 4321<br />
+              <i class="fa fa-envelope fa-lg"></i>
+              : <a href="mailto:confusion@food.net">confusion@food.net</a>
             </address>
           </div>
           <div class="col-12 col-sm-4 align-self-center">
