--- a/aboutus.html
+++ b/aboutus.html
@@ -57,7 +57,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="./contactus.html"
                 ><span class="fa fa-address-card fa-lg"></span>Contact</a
               >
             </li>
@@ -82,12 +82,12 @@
     </header>
 
     <div class="container">
-      <div class="row row-content">
+      <div class="row">
         <ol class="col-12 breadcrumb">
           <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
           <li class="breadcrumb-item active">About Us</li>
         </ol>
-        <div class="col">
+        <div class="col-12">
           <h3>About Us</h3>
           <hr />
         </div>
@@ -169,10 +169,10 @@
           <div class="col-4 offset-1 col-sm-2">
             <h5>Links</h5>
             <ul class="list-unstyled">
-              <li><a href="#">Home</a></li>
+              <li><a href="./index.html">Home</a></li>
               <li><a href="#">About</a></li>
               <li><a href="#">Menu</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="./contactus.html">Contact</a></li>
             </ul>
           </div>
           <div class="col-7 col-sm-5">
@@ -189,12 +189,22 @@
           </div>
           <div class="col-12 col-sm-4 align-self-center">
             <div class="text-center">
-              <a href="http://google.com/+">Google+</a>
-              <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-              <a href="http://www.linkedin.com/in/">LinkedIn</a>
-              <a href="http://twitter.com/">Twitter</a>
-              <a href="http://youtube.com/">YouTube</a>
-              <a href="mailto:">Mail</a>
+              <a href="http://google.com/+"
+                ><i class="fa fa-google-plus fa-lg"></i
+              ></a>
+              <a href="http://www.facebook.com/profile.php?id="
+                ><i class="fa fa-facebook fa-lg"></i
+              ></a>
+              <a href="http://www.linkedin.com/in/"
+                ><i class="fa fa-linkedin fa-lg"></i
+              ></a>
+              <a href="http://twitter.com/"
+                ><i class="fa fa-twitter fa-lg"></i
+              ></a>
+              <a href="http://youtube.com/"
+                ><i class="fa fa-youtube fa-lg"></i
+              ></a>
+              <a href="mailto:"><i class="fa fa-envelope-o fa-lg"></i></a>
             </div>
           </div>
         </div>
