--- a/aboutus.html
+++ b/aboutus.html
@@ -40,13 +40,13 @@
         <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="./index.html"
                 ><span class="fa fa-home fa-lg"></span>Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link active" href="#">
                 <span class="fa fa-info fa-lg"></span>
                 About</a
               >
@@ -131,7 +131,7 @@
         <div class="col-12">
           <div class="card card-body bg-light">
             <blockquote class="blockquote">
-              <p>
+              <p class="mb-0">
                 You better cut the pizza in four pieces because I'm not hungry
                 enough to eat six.
               </p>
@@ -199,7 +199,7 @@
           <h2>Facts &amp; Figures</h2>
           <div class="table-responsive">
             <table class="table table-striped">
-              <thead class="table-dark">
+              <thead class="thead-dark">
                 <tr>
                   <th>&nbsp;</th>
                   <th>2013</th>
