--- a/index.html
+++ b/index.html
@@ -79,8 +79,17 @@
               your culinary senses!
             </p>
           </div>
-          <div class="col col-sm align-self-center">
+          <div class="col-12 col-sm align-self-center">
             <img src="./img/logo.png" class="img-fluid" />
+          </div>
+          <div class="col-12 col-sm align-self-center">
+            <a
+              role="button"
+              href="#reservation-form"
+              class="btn btn-sm btn-block btn-warning"
+            >
+              Reserve Table
+            </a>
           </div>
         </div>
       </div>
@@ -99,8 +108,8 @@
             />
             <div class="media-body">
               <h2 class="mt-0">
-                Uthappizza<span class="badge badge-danger">HOT</span
-                ><span class="badge badge-pill badge-secondary">$4.99</span>
+                Uthappizza <span class="badge badge-danger">HOT</span>
+                <span class="badge badge-pill badge-secondary">$4.99</span>
               </h2>
               <p class="d-none d-sm-block">
                 A unique combination of Indian Uthappam (pancake) and Italian
@@ -113,17 +122,29 @@
       </div>
 
       <div class="row row-content align-items-center">
-        <div class="col-12 col-sm-4 order-sm-last col-md-3">
+        <div class="col-12 col-sm-4 col-md-3">
           <h3>This Month's Promotions</h3>
         </div>
-        <div class="col col-sm order-sm-first col-md">
-          <h2>Weekend Grand Buffet</h2>
-          <p>
-            Featuring mouthwatering combinations with a choice of five different
-            salads, six enticing appetizers, six main entrees and five choicest
-            desserts. Free flowing bubbly and soft drinks. All for just $19.99
-            per person
-          </p>
+        <div class="col col-sm col-md">
+          <div class="media">
+            <div class="media-body">
+              <h2 class="mt-0">
+                Weekend Grand Buffet <span class="badge badge-danger">NEW</span>
+              </h2>
+              <p class="d-none d-sm-block">
+                Featuring mouthwatering combinations with a choice of five
+                different salads, six enticing appetizers, six main entrees and
+                five choicest desserts. Free flowing bubbly and soft drinks. All
+                for just $19.99 per person
+              </p>
+            </div>
+            <div>
+              <img
+                class="ml-3 d-flex img-thumbnail align-self-center"
+                src="./img/buffet.png"
+              />
+            </div>
+          </div>
         </div>
       </div>
 
@@ -146,6 +167,126 @@
                 world, he specializes in creating mouthwatering Indo-Italian
                 fusion experiences.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-content" id="reservation-form">
+        <div class="col-sm-8 offset-sm-2 col-12">
+          <div class="card">
+            <div class="card-header bg-warning">
+              <h3 class="font-weight-bold text-white">Reserve a table</h3>
+            </div>
+            <div class="card-body">
+              <form>
+                <div class="form-group row">
+                  <label class="col-12 col-md-2 col-form-label"
+                    >Number of Guests</label
+                  >
+                  <div class="col-12 col-md-8">
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio1"
+                        value="option1"
+                      />
+                      <label class="form-check-label" for="inlineRadio1"
+                        >1</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio2"
+                        value="option2"
+                      />
+                      <label class="form-check-label" for="inlineRadio2"
+                        >2</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio3"
+                        value="option3"
+                      />
+                      <label class="form-check-label" for="inlineRadio3"
+                        >3</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio4"
+                        value="option4"
+                      />
+                      <label class="form-check-label" for="inlineRadio4"
+                        >4</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio5"
+                        value="option5"
+                      />
+                      <label class="form-check-label" for="inlineRadio5"
+                        >5</label
+                      >
+                    </div>
+                    <div class="form-check form-check-inline">
+                      <input
+                        class="form-check-input"
+                        type="radio"
+                        name="inlineRadioOptions"
+                        id="inlineRadio6"
+                        value="option6"
+                      />
+                      <label class="form-check-label" for="inlineRadio6"
+                        >6</label
+                      >
+                    </div>
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <label class="col-12 col-md-2">Date and Time</label>
+                  <div class="col-12 col-md-4">
+                    <input
+                      type="input"
+                      placeholder="Date"
+                      class="form-control"
+                    />
+                  </div>
+                  <div class="col-12 col-md-4">
+                    <input
+                      type="input"
+                      placeholder="Time"
+                      class="form-control"
+                    />
+                  </div>
+                </div>
+                <div class="form-group row">
+                  <div class="offset-md-2 col-md-2">
+                    <button
+                      type="submit"
+                      class="btn btn-primary font-weight-bold"
+                    >
+                      Reserve
+                    </button>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
         </div>
