--- a/index.html
+++ b/index.html
@@ -372,6 +372,14 @@
                 data-slide="next"
                 ><span class="carousel-control-next-icon"></span
               ></a>
+              <div class="btn-group" id="carouselButton">
+                <button class="btn btn-danger btn-small" id="carousel-pause">
+                  <span class="fa fa-pause"></span>
+                </button>
+                <button class="btn btn-danger btn-small" id="carousel-play">
+                  <span class="fa fa-play"></span>
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -466,6 +474,7 @@
               <li><a href="./contactus.html">Contact</a></li>
             </ul>
           </div>
+
           <div class="col-7 col-sm-5">
             <h5>Our Address</h5>
             <address>
@@ -478,6 +487,7 @@
               : <a href="mailto:confusion@food.net">confusion@food.net</a>
             </address>
           </div>
+
           <div class="col-12 col-sm-4 align-self-center">
             <div class="text-center">
               <a href="http://google.com/+"
@@ -499,6 +509,7 @@
             </div>
           </div>
         </div>
+
         <div class="row justify-content-center mt-2">
           <div class="col-auto">
             <p>© Copyright 2018 Ristorante Con Fusion</p>
@@ -509,5 +520,16 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $("#mycarousel").carousel({ interval: 2000 });
+        $("#carousel-pause").click(function () {
+          $("#mycarousel").carousel("pause");
+        });
+        $("#carousel-play").click(function () {
+          $("#mycarousel").carousel("cycle");
+        });
+      });
+    </script>
   </body>
 </html>
